--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,11 @@ boto3==1.18.63
 botocore==1.21.63
 Django==3.2.8
 django-crispy-forms==1.13.0
-django-decouple==2.1
 dynamorm==0.11.0
 jmespath==0.10.0
 marshmallow==3.13.0
 python-dateutil==2.8.2
+python-decouple==3.5
 pytz==2021.3
 s3transfer==0.5.0
 six==1.16.0
